fixing-overflow

--- a/style.css
+++ b/style.css
@@ -192,9 +192,7 @@ span:nth-child(10) {
 
 @media (max-width: 600px) {
   
-  body {
-    overflow: hidden;
-  }
+  
 
   .message {
     font-size: 28px;
